# 3-python-package-exercise-team-not-sure

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/brawndo/: brawndo.py  constants.py
tests/: test_rainbow_deterministic.py  test_rainbow_random.py  test_word_deterministic.py  test_word_random.py
